--- a/css/style.css
+++ b/css/style.css
@@ -709,26 +709,6 @@ textarea.input {
   width: 100%;
 }
 
-.wrapper::after {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: all 0.8s ease 0s;
-  -o-transition: all 0.8s ease 0s;
-  transition: all 0.8s ease 0s;
-}
-
-.wrapper._active::after {
-  opacity: 1;
-  visibility: visible;
-}
-
 .top-block__title {
   font-family: MTSSans;
   font-weight: bold;
@@ -1416,7 +1396,7 @@ body.ie ._ibg img {
   left: 0;
   width: 100%;
   z-index: 50;
-  border: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
   background-color: #f4f7fe;
 }
 
@@ -3099,6 +3079,26 @@ body.ie ._ibg img {
     font-size: 18px;
   }
 
+  .wrapper::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: all 0.8s ease 0s;
+    -o-transition: all 0.8s ease 0s;
+    transition: all 0.8s ease 0s;
+  }
+
+  .wrapper._active::after {
+    opacity: 1;
+    visibility: visible;
+  }
+
   .breadcrumb {
     margin-top: 70px;
   }
@@ -3124,17 +3124,7 @@ body.ie ._ibg img {
     z-index: 50;
     background-color: #f4f7fe;
     padding: 0px 20px;
-  }
-
-  .main-header__content::after {
-    content: "";
-    width: 100%;
-    height: 1px;
-    background: #e7e7e7;
-    display: block;
-    position: absolute;
-    bottom: 0;
-    z-index: 50;
+    border-bottom: 1px solid #e7e7e7;
   }
 
   .main-header__right {
@@ -3161,6 +3151,7 @@ body.ie ._ibg img {
     position: fixed;
     height: 70px;
     background-color: #f4f7fe;
+    border-bottom: 1px solid #e7e7e7;
     width: 100%;
     top: 0;
   }
@@ -3688,7 +3679,7 @@ body.ie ._ibg img {
   }
 
   .menu__body {
-    padding-top: 70px;
+    padding-top: 80px;
   }
 
   .menu__list {
